# Ferristype

./: Cargo.toml  README.md  build.rs
src/: ferristype.rs  lib.rs  main.rs
src/lang/: mod.rs
src/stats/: mod.rs  statistics.rs  timer.rs
src/terminalui/: color.rs  input.rs  mod.rs  terminal.rs
